[gd_scene load_steps=2 format=3 uid="uid://dry5f83aydp54"]

[ext_resource type="Script" path="res://scripts/prefabs/universal_menus/settings.gd" id="1_wqvby"]

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wqvby")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SpacerLeft" type="Control" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SpacerTop" type="Control" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.05

[node name="SettingsPanel" type="PanelContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/SettingsPanel"]
layout_mode = 2

[node name="SpacerTop" type="Control" parent="HBoxContainer/VBoxContainer/SettingsPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.02

[node name="SettingsTitle" type="RichTextLabel" parent="HBoxContainer/VBoxContainer/SettingsPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.501961)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 6
theme_override_constants/shadow_offset_y = 6
theme_override_constants/outline_size = 4
theme_override_font_sizes/normal_font_size = 40
theme_override_font_sizes/bold_font_size = 40
theme_override_font_sizes/italics_font_size = 40
theme_override_font_sizes/bold_italics_font_size = 40
theme_override_font_sizes/mono_font_size = 40
bbcode_enabled = true
text = "[center]Settings[/center]"
fit_content = true
autowrap_mode = 0

[node name="Spacer1" type="Control" parent="HBoxContainer/VBoxContainer/SettingsPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.05

[node name="HotkeysTitle" type="RichTextLabel" parent="HBoxContainer/VBoxContainer/SettingsPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 24
theme_override_font_sizes/bold_font_size = 24
theme_override_font_sizes/italics_font_size = 24
theme_override_font_sizes/bold_italics_font_size = 24
theme_override_font_sizes/mono_font_size = 24
bbcode_enabled = true
text = "[center]Hotkeys:[/center]
"
fit_content = true
autowrap_mode = 0

[node name="Spacer2" type="Control" parent="HBoxContainer/VBoxContainer/SettingsPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.02

[node name="ResetHotkeysButton" type="Button" parent="HBoxContainer/VBoxContainer/SettingsPanel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = " Reset to Default "

[node name="HotkeysList" type="ScrollContainer" parent="HBoxContainer/VBoxContainer/SettingsPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/SettingsPanel/VBoxContainer/HotkeysList"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="KeyMapItem" type="HSplitContainer" parent="HBoxContainer/VBoxContainer/SettingsPanel/VBoxContainer/HotkeysList/VBoxContainer"]
layout_mode = 2
split_offset = 250
dragger_visibility = 2

[node name="ActionTitle" type="RichTextLabel" parent="HBoxContainer/VBoxContainer/SettingsPanel/VBoxContainer/HotkeysList/VBoxContainer/KeyMapItem"]
custom_minimum_size = Vector2(0, 26)
layout_mode = 2
size_flags_vertical = 4
bbcode_enabled = true
text = "[center](action titles look like this)[center]"
fit_content = true

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/SettingsPanel/VBoxContainer/HotkeysList/VBoxContainer/KeyMapItem"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer/VBoxContainer/SettingsPanel/VBoxContainer/HotkeysList/VBoxContainer/KeyMapItem/VBoxContainer"]
layout_mode = 2

[node name="EventTitle" type="RichTextLabel" parent="HBoxContainer/VBoxContainer/SettingsPanel/VBoxContainer/HotkeysList/VBoxContainer/KeyMapItem/VBoxContainer/PanelContainer"]
layout_mode = 2
mouse_filter = 1
bbcode_enabled = true
text = "[center](event titles look like this)[/center]"
fit_content = true

[node name="SetButton" type="Button" parent="HBoxContainer/VBoxContainer/SettingsPanel/VBoxContainer/HotkeysList/VBoxContainer/KeyMapItem/VBoxContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 3
flat = true

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/SettingsPanel/VBoxContainer/HotkeysList/VBoxContainer/KeyMapItem/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ResetButton" type="Button" parent="HBoxContainer/VBoxContainer/SettingsPanel/VBoxContainer/HotkeysList/VBoxContainer/KeyMapItem/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "reset"

[node name="ClearButton" type="Button" parent="HBoxContainer/VBoxContainer/SettingsPanel/VBoxContainer/HotkeysList/VBoxContainer/KeyMapItem/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "clear
"

[node name="RemoveButton" type="Button" parent="HBoxContainer/VBoxContainer/SettingsPanel/VBoxContainer/HotkeysList/VBoxContainer/KeyMapItem/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "remove
"

[node name="AddButton" type="Button" parent="HBoxContainer/VBoxContainer/SettingsPanel/VBoxContainer/HotkeysList/VBoxContainer/KeyMapItem/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "add
"

[node name="Spacer" type="Control" parent="HBoxContainer/VBoxContainer/SettingsPanel/VBoxContainer/HotkeysList/VBoxContainer"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2

[node name="Spacer3" type="Control" parent="HBoxContainer/VBoxContainer/SettingsPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.05

[node name="CloseSettings" type="Button" parent="HBoxContainer/VBoxContainer/SettingsPanel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Close Settings"

[node name="SpacerBottom" type="Control" parent="HBoxContainer/VBoxContainer/SettingsPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.02

[node name="SpacerBottom" type="Control" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.05

[node name="SpacerRight" type="Control" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5

[node name="InputListenerScreen" type="Panel" parent="."]
visible = false
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="RichTextLabel" type="RichTextLabel" parent="InputListenerScreen"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "[center]( listening for input... )[center]"
fit_content = true

[connection signal="pressed" from="HBoxContainer/VBoxContainer/SettingsPanel/VBoxContainer/ResetHotkeysButton" to="." method="_on_reset_hotkeys_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/SettingsPanel/VBoxContainer/CloseSettings" to="." method="_on_close_settings_pressed"]
